--- a/jfrog-pipelines-hello-world.yml
+++ b/jfrog-pipelines-hello-world.yml
@@ -1,11 +1,11 @@
-resources:
-  - name: myAppRepo
-    type: GitRepo
-    configuration:
-      gitProvider: manishas_github   # replace with your integration  
-      path: manishas/app    # replace with your repository name
-      branches:
-        include: master
+#resources:
+#  - name: repo-jfrog-pipelines-hello-world
+#    type: GitRepo
+#    configuration:
+#      gitProvider: manishas_github   # replace with your integration  
+#      path: manishas/app    # replace with your repository name
+#      branches:
+#        include: master
         
 pipelines:
   - name: pipeline-hello-world
