--- a/jfrog-pipelines-hello-world.yml
+++ b/jfrog-pipelines-hello-world.yml
@@ -1,11 +1,11 @@
-#resources:
-#  - name: repo-jfrog-pipelines-hello-world
-#    type: GitRepo
-#    configuration:
-#      gitProvider: manishas_github   # replace with your integration  
-#      path: manishas/app    # replace with your repository name
-#      branches:
-#        include: master
+resources:
+  - name: someRepo
+    type: GitRepo
+    configuration:
+      gitProvider: manishas_github   # replace with your integration  
+      path: manishas-jfrog/jfrog-pipelines-hello-world    # replace with your repository name
+      branches:
+        include: master
         
 pipelines:
   - name: pipeline_hello_world
@@ -14,11 +14,11 @@ pipelines:
         type: Bash
         configuration:
           inputResources:
-            - name: myAppRepo
+            - name: someRepo
         execution:
           onExecute:
             - printenv
-            - echo $res_myAppRepo_commitSha
+            - echo $res_someRepo_commitSha
             - add_run_variables first_stepid=$step_id
 
       - name: step_2
