--- a/jfrog-pipelines-hello-world.yml
+++ b/jfrog-pipelines-hello-world.yml
@@ -15,6 +15,8 @@ pipelines:
         configuration:
           inputResources:
             - name: someRepo
+          integrations:
+            - name: manishas_jira
         execution:
           onExecute:
             - echo $res_someRepo_commitSha
