--- a/jfrog-pipelines-hello-world.yml
+++ b/jfrog-pipelines-hello-world.yml
@@ -19,6 +19,10 @@ resources:
       commitSha: 1
       runID: 1
 
+  - name: s2_output
+    type: PropertyBag
+    configuration:
+      continue: 0
 
 pipelines:
   - name: my_first_pipeline
@@ -45,18 +49,22 @@ pipelines:
       - name: p1_s2
         type: Bash
         configuration:
+          environmentVariables:
+            isContinue: yes
           inputSteps:
             - name: p1_s1
         execution:
           onExecute:
             # Demonstrates the availability of an env variable written to run state during p1_s1
             - echo $current_runid
+            - write_output s2_output continue=$icContinue
 
       - name: p1_s3
         type: Bash
         configuration:
-          inputSteps:
-            - name: p1_s2
+          inputResources:
+            - name: s2_output
+              newVersionOnly: true
           outputResources:
             - name: myPropertyBag
         execution:
