--- a/jfrog-pipelines-hello-world.yml
+++ b/jfrog-pipelines-hello-world.yml
@@ -53,6 +53,8 @@ pipelines:
             isContinue: yes
           inputSteps:
             - name: p1_s1
+          outputResources:
+            - name: s2_output            
         execution:
           onExecute:
             # Demonstrates the availability of an env variable written to run state during p1_s1
