--- a/jfrog-pipelines-hello-world.yml
+++ b/jfrog-pipelines-hello-world.yml
@@ -84,6 +84,7 @@ pipelines:
       - name: p2_s1
         type: Bash
         configuration:
+          waitOnParentComplete: true
           inputResources:
             # Sets up step to be triggered when myPropertyBag is updated
             - name: myPropertyBag
